RESOLVED FIXED 193509
Regression(r240046) Several API tests are crashing
https://bugs.webkit.org/show_bug.cgi?id=193509
Summary Regression(r240046) Several API tests are crashing
Chris Dumez
Reported 2019-01-16 14:09:01 PST
Several API tests are crashing since r240046: Crashed TestWebKitAPI.WebKit.ResizeWindowAfterCrash _RegisterApplication(), FAILED TO establish the default connection to the WindowServer, _CGSDefaultConnection() is NULL. _RegisterApplication(), FAILED TO establish the default connection to the WindowServer, _CGSDefaultConnection() is NULL. libc++abi.dylib: Pure virtual function called! TestWebKitAPI.WebKit.LoadPageAfterCrash _RegisterApplication(), FAILED TO establish the default connection to the WindowServer, _CGSDefaultConnection() is NULL. _RegisterApplication(), FAILED TO establish the default connection to the WindowServer, _CGSDefaultConnection() is NULL. libc++abi.dylib: Pure virtual function called! TestWebKitAPI.WebKit.EnumerateDevices _RegisterApplication(), FAILED TO establish the default connection to the WindowServer, _CGSDefaultConnection() is NULL. _RegisterApplication(), FAILED TO establish the default connection to the WindowServer, _CGSDefaultConnection() is NULL. libc++abi.dylib: Pure virtual function called! TestWebKitAPI.WKNavigation.FailureToStartWebProcessAfterCrashRecovery _RegisterApplication(), FAILED TO establish the default connection to the WindowServer, _CGSDefaultConnection() is NULL. _RegisterApplication(), FAILED TO establish the default connection to the WindowServer, _CGSDefaultConnection() is NULL. libc++abi.dylib: Pure virtual function called! TestWebKitAPI.WebKit.ReloadPageAfterCrash _RegisterApplication(), FAILED TO establish the default connection to the WindowServer, _CGSDefaultConnection() is NULL. _RegisterApplication(), FAILED TO establish the default connection to the WindowServer, _CGSDefaultConnection() is NULL. libc++abi.dylib: Pure virtual function called!
Attachments
Patch (80.77 KB, patch)
2019-01-16 14:19 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-01-16 14:19:05 PST
Geoffrey Garen
Comment 2 2019-01-16 15:07:18 PST
Comment on attachment 359309 [details] Patch r=me
Chris Dumez
Comment 3 2019-01-16 15:17:09 PST
Comment on attachment 359309 [details] Patch Clearing flags on attachment: 359309 Committed r240055: <https://trac.webkit.org/changeset/240055>
Chris Dumez
Comment 4 2019-01-16 15:17:11 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-01-16 15:18:30 PST
Note You need to log in before you can comment on or make changes to this bug.